added the two classes CodeByEmail and LinkByEmail, also check out the pom.xml for the related dependencies